Added 404 routes and corresponding pages. Updated saveUserToDb and createUserData functions.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -59,5 +59,10 @@
     "sign up": "Sign up"
   },
   "register": "Register",
-  "login": "Login"
+  "login": "Login",
+  "404": {
+    "title": "Something is not right...",
+    "description": "Page you are trying to open does not exist. You may have mistyped the address, or the page has been moved to another URL. If you think this is an error contact support.",
+    "button": "Go back to home page"
+  }
 }
