--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -48,5 +48,10 @@
     "sign up": "Зарегистрироваться"
   },
   "register": "Зарегистрироваться",
-  "login": "Войти"
+  "login": "Войти",
+  "404": {
+    "title": "Что-то не так...",
+    "description": "Страница, которую вы пытаетесь открыть, не существует. Возможно, вы ошиблись в вводе адреса или страница была перемещена на другой URL-адрес. Если вы считаете, что это ошибка, обратитесь в службу поддержки.",
+    "backButton": "Вернуться на домашнюю страницу"
+  }
 }
