--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -53,5 +53,18 @@
     "title": "Что-то не так...",
     "description": "Страница, которую вы пытаетесь открыть, не существует. Возможно, вы ошиблись в вводе адреса или страница была перемещена на другой URL-адрес. Если вы считаете, что это ошибка, обратитесь в службу поддержки.",
     "backButton": "Вернуться на домашнюю страницу"
+  },
+  "search": {
+    "searchPlaceholder": "Поиск..."
+  },
+
+  "Teams": "Команды",
+  "Friends": "Друзья",
+  "Statistics": "Статистика",
+  "userinfo": {
+    "Enter your data": "Введите свои данные",
+    "Your Name": "Ваше имя",
+    "Your Last Name": "Ваша фамилия",
+    "Submit": "Отправить"
   }
 }
