feat: update header

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -55,7 +55,7 @@
     "backButton": "Вернуться на домашнюю страницу"
   },
   "search": {
-    "searchPlaceholder": "Поиск..."
+    "searchPlaceholder": "Поиск пользователей..."
   },
 
   "profile": {},
