--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -66,7 +66,7 @@
     "button": "Go back to home page"
   },
   "search": {
-    "searchPlaceholder": "Search..."
+    "searchPlaceholder": "Search for users here..."
   },
   "profile": {},
   "Teams": "Teams",
