--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -58,6 +58,7 @@
     "searchPlaceholder": "Поиск..."
   },
 
+  "profile": {},
   "Teams": "Команды",
   "Friends": "Друзья",
   "Statistics": "Статистика",
