--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -51,7 +51,7 @@
   "login": "Войти",
   "404": {
     "title": "Что-то не так...",
-    "description": "Страница, которую вы пытаетесь открыть, не существует. Возможно, вы ошиблись в вводе адреса или страница была перемещена на другой URL-адрес. Если вы считаете, что это ошибка, обратитесь в службу поддержки.",
+    "description": "Страница, которую вы пытаетесь открыть, не существует. Возможно, вы опечатались, либо страницу переместили на другой URL. Если вы считаете, что это ошибка, свяжитесь с поддержкой.",
     "backButton": "Вернуться на домашнюю страницу"
   },
   "search": {
